Created a basic test for ToolManagerService and improved its error handling and functionality