@@ -5,7 +5,6 @@ import com.gearshiftgaming.se_mod_manager.backend.models.Result;
 import com.gearshiftgaming.se_mod_manager.backend.models.ResultType;
 import com.gearshiftgaming.se_mod_manager.frontend.domain.UiService;
 import javafx.concurrent.Task;
-import org.apache.commons.lang3.exception.ExceptionUtils;
 
 import java.io.File;
 import java.io.IOException;
@@ -13,11 +12,10 @@ import java.io.InputStream;
 import java.io.RandomAccessFile;
 import java.net.HttpURLConnection;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Properties;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 
@@ -35,49 +33,86 @@ import static org.apache.commons.lang3.exception.ExceptionUtils.getStackTrace;
  */
 public class ToolManagerService {
 
-    private final UiService UI_SERVICE;
+    private final UiService uiService;
 
-    private final String STEAM_CMD_PATH;
+    private final String steamCmdLocalPath;
 
-    private final String STEAM_CMD_SOURCE_LOCATION;
+    private final String steamCmdSourceLocation;
 
-    public ToolManagerService(Properties properties, UiService uiService) {
-        STEAM_CMD_PATH = properties.getProperty("semm.steam.steamcmd.folder.path");
-        STEAM_CMD_SOURCE_LOCATION = properties.getProperty("semm.steam.steamcmd.download.source");
-        this.UI_SERVICE = uiService;
+    private final int maxRetries;
+
+    private final int connectionTimeout;
+
+    private final int readTimeout;
+
+    private final int retryDelay;
+
+
+    public ToolManagerService(UiService uiService, String steamCmdLocalPath, String steamCmdSourceLocation, int maxRetries, int connectionTimeout, int readTimeout, int retryDelay) {
+        this.uiService = uiService;
+        this.steamCmdLocalPath = steamCmdLocalPath;
+        this.steamCmdSourceLocation = steamCmdSourceLocation;
+        this.maxRetries = maxRetries;
+        this.connectionTimeout = connectionTimeout;
+        this.readTimeout = readTimeout;
+        this.retryDelay = retryDelay;
     }
 
     //TODO: Need to call all this from UI service and master manager
-    //TODO: We need some sort of logic around checking to make sure the download isn't frozen, that the connection hasn't broken, and add a timeout + retries, and a popup if it fails to download.
-    //TODO: This should return, and be, a task.
-    public Task<Result<Void>> setupTools() throws IOException {
+    public Task<Result<Void>> setupTools() {
         return new Task<>() {
             @Override
             protected Result<Void> call() throws Exception {
-                Path steamCmdPath = Path.of(STEAM_CMD_PATH);
-                //Make the base directories we need if they don't exist
-                if (Files.notExists(steamCmdPath)) {
-                    Files.createDirectories(steamCmdPath);
+                //Make the base directories and file we need if they don't exist
+                Path steamDownloadPath = Path.of(steamCmdLocalPath);
+                if (Files.notExists(steamDownloadPath)) {
+                    Files.createDirectories(steamDownloadPath.getParent());
+                }
+
+                if (Files.notExists(steamDownloadPath)) {
+                    Files.createFile(steamDownloadPath);
                 }
 
                 Result<Void> toolSetupResult;
                 //Check if we already have steam CMD downloaded. If it isn't, download it.
-                UI_SERVICE.log("Downloading required tools...", MessageType.INFO);
-                if (Files.notExists(Path.of(STEAM_CMD_PATH + "/steamcmd.exe"))) {
-                    UI_SERVICE.log("Downloading Steam CMD...", MessageType.INFO);
-                    //TODO: Add some handling logic here to make sure it can be resumed.
-                    URL steamDownloadUrl = Paths.get(STEAM_CMD_SOURCE_LOCATION).toUri().toURL();
+                uiService.log("Downloading required tools...", MessageType.INFO);
+                if (Files.notExists(Path.of(steamCmdLocalPath + "/steamcmd.exe"))) {
+                    uiService.log("Downloading Steam CMD...", MessageType.INFO);
+                    URL steamDownloadUrl = new URI(steamCmdSourceLocation).toURL();
                     long remoteSteamCmdFileSize = getSteamCmdRemoteSize(steamDownloadUrl);
+                    if(remoteSteamCmdFileSize == -1) {
+                        toolSetupResult = new Result<>();
+                        toolSetupResult.addMessage("Failed to get size of SteamCMD.", ResultType.FAILED);
+                        return toolSetupResult;
+                    }
+
+                    //Get the largest common denominator for the file size and use that to create the update message
+                    int divisor;
+                    String divisorName;
+
+                    if(remoteSteamCmdFileSize <= 999999) { //Kilobyte
+                        divisor = 1000;
+                        divisorName = "KB";
+                    } else if (remoteSteamCmdFileSize <= 999999999) { //Megabyte
+                        divisor = 1000000;
+                        divisorName = "MB";
+                    } else { //Gigabyte
+                        divisor = 1000000000;
+                        divisorName = "GB";
+                    }
+
                     toolSetupResult = downloadSteamCmd(steamDownloadUrl,
-                            STEAM_CMD_PATH,
+                            steamCmdLocalPath,
                             remoteSteamCmdFileSize,
+                            divisor,
+                            divisorName,
                             this::updateProgress,
                             this::updateMessage);
 
                     if (toolSetupResult.isSuccess())
-                        UI_SERVICE.log("Successfully downloaded Steam CMD.", MessageType.INFO);
+                        uiService.log("Successfully downloaded Steam CMD.", MessageType.INFO);
                     else
-                        UI_SERVICE.log("Failed to download Steam CMD.", MessageType.ERROR);
+                        uiService.log("Failed to download Steam CMD.", MessageType.ERROR);
                 } else {
                     toolSetupResult = new Result<>();
                     toolSetupResult.addMessage("Steam CMD already installed. Skipping.", ResultType.SUCCESS);
@@ -86,6 +121,7 @@ public class ToolManagerService {
                 //Add a final message to the download chain if everything succeeded. If it isn't, we just want to log the failure from the more specific method.
                 if (toolSetupResult.isSuccess())
                     toolSetupResult.addMessage("Successfully downloaded all required tools.", ResultType.SUCCESS);
+                //TODO: unzip the download.
                 return toolSetupResult;
             }
         };
@@ -97,15 +133,13 @@ public class ToolManagerService {
      * @param steamCmdUrl The location we will download SteamCMD from.
      * @return The size of the SteamCMD zip on the remote server.
      */
-    private long getSteamCmdRemoteSize(URL steamCmdUrl) {
+    private long getSteamCmdRemoteSize(URL steamCmdUrl) throws IOException {
         HttpURLConnection sizeCheckConnection = null;
 
         //Get the size of the remote file
         try {
             sizeCheckConnection = (HttpURLConnection) steamCmdUrl.openConnection();
             sizeCheckConnection.setRequestMethod("HEAD");
-        } catch (IOException e) {
-            throw new RuntimeException(e);
         } finally {
             //Make sure our connection is closed if it was opened.
             if (sizeCheckConnection != null)
@@ -121,20 +155,14 @@ public class ToolManagerService {
      * @param downloadLocation The location we want to save the SteamCMD zip file to.
      * @return Whether the download is finished or not
      */
-    private Result<Void> downloadSteamCmd(URL steamCmdUrl, String downloadLocation, long remoteFileSize, BiConsumer<Long, Long> progressUpdater, Consumer<String> messageUpdater) {
+    private Result<Void> downloadSteamCmd(URL steamCmdUrl, String downloadLocation, long remoteFileSize, int divisor, String divisorName, BiConsumer<Long, Long> progressUpdater, Consumer<String> messageUpdater) throws InterruptedException {
         Result<Void> downloadResult = new Result<>();
         File outputFile = new File(downloadLocation);
 
-        //TODO: Replace with property values and consts in the class.
-        int maxRetries = 3;
         int retryCount = 0;
-        int connectTimeout = 5000; // 5 seconds
-        int readTimeout = 10000; // 10 seconds
-
-        while (retryCount < maxRetries) {
+        while (retryCount <= maxRetries) {
             long existingFileSize = outputFile.exists() ? outputFile.length() : 0;
 
-            //TODO: We should also do "updateMessage" as a retry message using text like "Retrying... (1/3)" or something, if we have to retry.
             //If our file on disk is smaller than the remote, resume the download at the byte location we stopped.
             //We include this to have the retries function. If the outer condition from the setupTools is removed, this can cause issues with downloading steam CMD when already downloaded.
             if (existingFileSize >= remoteFileSize) {
@@ -145,7 +173,7 @@ public class ToolManagerService {
             HttpURLConnection httpConnection = null;
             try {
                 httpConnection = (HttpURLConnection) steamCmdUrl.openConnection();
-                httpConnection.setConnectTimeout(connectTimeout);
+                httpConnection.setConnectTimeout(connectionTimeout);
                 httpConnection.setReadTimeout(readTimeout);
 
                 if (existingFileSize > 0) {
@@ -154,6 +182,11 @@ public class ToolManagerService {
                 }
 
                 int responseCode = httpConnection.getResponseCode();
+                if(responseCode < 200 || responseCode >= 300) {
+                    String errorMessage = String.format("Received HTTP response code %d from server.", responseCode);
+                    uiService.log(errorMessage, MessageType.ERROR);
+                    throw new ToolDownloadFailedException(errorMessage);
+                }
                 boolean isResuming = (responseCode == HttpURLConnection.HTTP_PARTIAL);
 
                 //Writes our file at the specified byte location so we can download it safely.
@@ -162,37 +195,34 @@ public class ToolManagerService {
                         raf.seek(existingFileSize);
                     }
 
+                    //Download the file 8KB at a time.
                     byte[] buffer = new byte[8192];
                     int bytesRead;
                     long totalBytesDownloaded = existingFileSize;
+
                     while ((bytesRead = inputStream.read(buffer)) != -1) {
                         raf.write(buffer, 0, bytesRead);
                         totalBytesDownloaded += bytesRead;
 
-                        //Get the largest common denominator for the file size and use that to create the update message
-                        int divisor;
-                        String divisorName;
-                        if (remoteFileSize >= 1000000000) {  //Gigabyte
-                            divisor = 1000000000;
-                            divisorName = "GB";
-                        } else if (remoteFileSize < 999999999 && remoteFileSize >= 1000000) { //Megabyte
-                            divisor = 1000000;
-                            divisorName = "MB";
-                        } else { //Kilobyte
-                            divisor = 1000;
-                            divisorName = "KB";
-                        }
+                        //Update our task with the percentage progress done and the amount of bytes downloaded out of the whole, divided by the LCD.
                         messageUpdater.accept(String.format("%d%s/%d%s", totalBytesDownloaded / divisor, divisorName, remoteFileSize / divisor, divisorName));
                         progressUpdater.accept(totalBytesDownloaded, remoteFileSize);
                     }
 
-                    downloadResult.addMessage("Successfully downloaded SteamCMD.", ResultType.SUCCESS);
+                    if(totalBytesDownloaded == remoteFileSize) {
+                        downloadResult.addMessage("Successfully downloaded SteamCMD.", ResultType.SUCCESS);
+                        retryCount = 99;
+                    }
+                    else 
+                        throw new ToolDownloadFailedException("Download of SteamCMD was interrupted mid download and was unable to complete.");
                 }
-            } catch (SocketTimeoutException e) {
-                messageUpdater.accept(String.format("Retrying... (%d/%d)", retryCount, maxRetries));
+            } catch (SocketTimeoutException | ToolDownloadFailedException e) {
                 retryCount++;
-                if (retryCount < maxRetries)
-                    downloadResult.addMessage("Download failed, retrying... Attempt " + retryCount, ResultType.WARN);
+                messageUpdater.accept(String.format("Retrying... (%d/%d)", retryCount, maxRetries));
+                if (retryCount <= maxRetries) {
+                    downloadResult.addMessage("SteamCMD download failed, retrying... Attempt " + retryCount, ResultType.WARN);
+                    Thread.sleep(retryDelay);
+                }
                 else
                     downloadResult.addMessage(getStackTrace(e), ResultType.FAILED);
             } catch (IOException e) {
